24Aug01=======================================================================
1. Allow badmsg to reject on interface callsign ('I')
20Aug01=======================================================================
1. protect against PC41s with field[3] == field[2]
2. Redo Julian stuff as proper objects
3. Make the various Log display come out forwards instead of backwards
4. Add the dbgclean routine to system cron to clear out all debug files 
more then 10 days old.
19Aug01=======================================================================
1. Fix rcmds
2. make isolation when there are no filters present work again?
3. dup check PC16/17/19/21 !
17Aug01=======================================================================
1. Sort out PC41 handling to include type 5 records for QRA locators and also
remove all filtering (but retain ephemeral dup checking).
2. Improve format checking in latlong and qra locators.
3. Sort sh/st so that sh/st by itself displays only the local call not the
whole lot (all 17000+ users records in my case). SH/ST ALL does this.
16Aug01=======================================================================
1. send a forward/opernam for a logged in user once a month (when they next
login).
2. rearrange rcmd stuff to be more maintainable and also be certain that 
they are translated in both directions correctly for clx and ak1a style.
3. Allow PC41s to be propagated and hope that the ephemeral dup filters 
do their job!
15Aug01=======================================================================
1. fix problem with talks not coming out anymore
13Aug01=======================================================================
1. fixed problem of dxspots not being echoed back to spotter (announces too)
02Aug01=======================================================================
1. correct manual and help references on accept/route and reject/route. Thanks
to ea1dav for pointing out the errors